--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,54 +2,66 @@
 @tailwind components;
 @tailwind utilities;
 
+.bodyTextSize {
+    @apply md:text-[20px] text-[15px]
+}
+
 @font-face {
     font-family: "Inter";
     src: url(/fonts/Inter-Thin.ttf) format("truetype");
     font-weight: 100;
     font-style: normal;
 }
+
 @font-face {
     font-family: "Inter";
     src: url(/fonts/Inter-ExtraLight.ttf) format("truetype");
     font-weight: 200;
     font-style: normal;
 }
+
 @font-face {
     font-family: "Inter";
     src: url(/fonts/Inter-Light.ttf) format("truetype");
     font-weight: 300;
     font-style: normal;
 }
+
 @font-face {
     font-family: "Inter";
     src: url(/fonts/Inter-Regular.ttf) format("truetype");
     font-weight: 400;
     font-style: normal;
 }
+
 @font-face {
     font-family: "Inter";
     src: url(/fonts/Inter-Medium.ttf) format("truetype");
     font-weight: 500;
     font-style: normal;
 }
+
 @font-face {
     font-family: "Inter";
     src: url(/fonts/Inter-SemiBold.ttf) format("truetype");
     font-weight: 600;
     font-style: normal;
 }
+
 @font-face {
     font-family: "Inter";
     src: url(/fonts/Inter-Bold.ttf) format("truetype");
     font-weight: 700;
     font-style: normal;
 }
+
 @font-face {
     font-family: "Inter";
     src: url(/fonts/Inter-ExtraBold.ttf) format("truetype");
     font-weight: 800;
     font-style: normal;
 }
+
 @font-face {
     font-family: "Inter";
     src: url(/fonts/Inter-Black.ttf) format("truetype");
@@ -57,16 +69,32 @@
     font-style: normal;
 }
 
-@layer base{
-    *{
+@layer base {
+    * {
         @apply font-inter;
     }
 
-    html{
+    html {
         scroll-behavior: smooth;
     }
 
-    .text-tiny{
-        font-size: clamp(12px,1.8vw,18px) !important;
+    .text-tiny {
+        font-size: clamp(12px, 1.8vw, 18px) !important;
+    }
+}
+
+select {
+    @apply border-borderColor
+}
+
+.text-xl {
+
+}
+
+@media screen and (max-width:768px) {
+    h5.text-xl {
+        font-size: 28px !important;
+        line-height: 38px !important;
+
     }
 }
