--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+
+
+.drop-shadow-lg{
+    filter: none !important;
+}
 .bodyTextSize {
     @apply md:text-[20px] text-[15px]
 }
