--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -41,6 +41,10 @@ a[disabled='true'] {
     border-radius: 50%;
 }
 
+.container {
+    max-width: 1400px;
+}
+
 @media screen and (min-width:1024px) {
     .container {
         padding-left: 5rem;
