--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -71,8 +71,9 @@ a[disabled='true'] {
     }
 
     p.text-mob,
+    span.text-mob,
     .text-mob {
-        font-size: 18px !important;
+        font-size: 16px !important;
     }
 
     .section-size {
@@ -163,6 +164,7 @@ a[disabled='true'] {
     html {
         scroll-behavior: smooth;
         overflow-wrap: break-word;
+        
     }
 
     .text-tiny {
